Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114956

\generatelist <groupname> does not sort the generated list

XMLWordPrintable

    • 25f067613 (dev), d441e73ab (6.5), 56494f3ca (6.6)
    • DaVinci 83

      Unlike \annotatedlist, \generatelist <groupname> does not sort the generated unordered list, instead listing the items in the order they were encountered in the source.

        For Gerrit Dashboard: QTBUG-114956
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes