src/qdoc/qdoc/htmlgenerator.cpp
@@ -2969,8 +2969,11 @@ bool HtmlGenerator::generateGroupList(CollectionNode *cn)
     m_qdb->mergeCollections(cn);
     if (cn->members().isEmpty())
         return false;
+
+    NodeList members{cn->members()};
+    std::sort(members.begin(), members.end(), Node::nodeNameLessThan);
     out() << "<ul>\n";
-    for (const auto *node : cn->members()) {
+    for (const auto *node : std::as_const(members)) {
         out() << "<li translate=\"no\">";
         generateFullName(node, nullptr);
         out() << "</li>\n";
